apps/plex/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          ports:
            - name: pms
              containerPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /identity
              port: pms
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /identity
              port: pms
            periodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-pvc
        - name: media
          persistentVolumeClaim:
            claimName: plex-media-pvc
