apps/plex/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Plex"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "plex"
    gethomepage.dev/href: "https://plex.cyphers.app"
    gethomepage.dev/description: "Media Server"
spec:
  type: ClusterIP
  ports:
    - port: 32400
      targetPort: pms
      protocol: TCP
      name: pms
  selector:
    app.kubernetes.io/name: plex
