apps/plex/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Plex"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "plex"
    gethomepage.dev/description: "Media Server"
    gethomepage.dev/href: "https://plex.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: plex
          namespace: plex
          port: 32400
  tls:
    secretName: production-cyphers-app-tls
